[package]
name = "velocity"
version = "0.0.1"
edition = "2021"
authors = ["fashionbrot <fashionbrot@163.com>"]
description = "velocity 相似模板引擎"
license = "Apache-2.0"
[dependencies]
regex = "1.11.1"
lazy_static = "1.4.0"
md5 = "0.7.0"
tokio = { version = "1.34.0", features = ["full"] }  # 确保使用最新版本

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

log = "0.4.22"
env_logger = "0.11.6"
evalexpr="12.0.2"